--- a/public/var.css
+++ b/public/var.css
@@ -3,9 +3,10 @@
     --black:#101010;
     --main:#2D75F1;
     --gray:#f6f6f6;
-    --diff:#ff000027;
+    --diff:#ffd3d3;
     --clr-danger:#ff0000;
 
     --shadowblack:rgba(58, 58, 58, .2);
     --txtGray:#3c3c3c;
+    --txtClose:#6e6e6e;
 }
