--- a/public/style.css
+++ b/public/style.css
@@ -145,6 +145,7 @@ input[type=number]::-webkit-outer-spin-button {
     width: 90%;
     position: absolute; top: 0;
     margin-top: 50px; margin-left: 5%;
+    box-shadow: none;
 }
 .ItemCapsule__money{
     color: var(--gray);
