--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,9 @@ body{
 }
 .Header{
     width: 100%; height: 120px;
+    max-width: 800px;
+    margin-left: 50%;
+    transform: translateX(-50%);
     background: rgb(34,123,239);
     background: linear-gradient(0deg, rgba(34,123,239,1), rgba(122,75,255,1) 100%);
     margin-bottom: 30px; position: fixed; top: 0; z-index: 99;
@@ -158,3 +161,11 @@ input[type=number]::-webkit-outer-spin-button {
 #amountCapsule4:focus{
     outline: 3px solid var(--clr-danger);
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
